rnsc/test_data/rns_integration/error/parser/inner_classes_attr_directive/outside_class_before.rns
; Tests that .inner_classes_attr directive before .class is detected as unexpected token.
; Expected error: E-008 (unexpected token before class definition)
; The .inner_classes_attr directive is only valid inside a class body, not before it.

.inner_classes_attr
.inner_classes_attr_end

.class public MyClass
.super java/lang/Object

.class_end
